@@ -1,3 +1,10 @@
+2003-11-30  Kejia Zhao  <kejia_zh@nudt.edu.cn>
+
+	* trans-array.c (gfc_conv_array_parameter): Simplify
+	array argument passing for array name actual argument.
+	* trans-expr.c (gfc_conv_function_call): Ditto
+	* trans-types.c (gfc_is_nodesc_array):Ditto.
+
 2003-11-30  Paul Brook  <paul@nowt.org>
 
 	* f95-lang.c (gfc_post_options): Move ...
